@@ -33,10 +33,9 @@ G_BEGIN_DECLS
   (G_TYPE_CHECK_CLASS_CAST((klass), GST_TYPE_ADAPTER, GstAdapterClass))
 #define GST_ADAPTER_GET_CLASS(obj) \
   (G_TYPE_INSTANCE_GET_CLASS ((obj), GST_TYPE_ADAPTER, GstAdapterClass))
-
 #define GST_IS_ADAPTER(obj) \
   (G_TYPE_CHECK_INSTANCE_TYPE((obj), GST_TYPE_ADAPTER))
-#define GST_IS_ADAPTER_CLASS(obj) \
+#define GST_IS_ADAPTER_CLASS(klass) \
   (G_TYPE_CHECK_CLASS_TYPE((klass), GST_TYPE_ADAPTER))
 
 typedef struct _GstAdapter GstAdapter;
