@@ -1,3 +1,15 @@
+2006-04-08  Stefan Kost  <ensonic@users.sf.net>
+
+	* gst/gstindex.h:
+	* gst/gstxml.h:
+	* libs/gst/base/gstadapter.h:
+	* libs/gst/base/gstbasesink.h:
+	* libs/gst/base/gstbasesrc.h:
+	* libs/gst/base/gstbasetransform.h:
+	* libs/gst/base/gstcollectpads.h:
+	* libs/gst/base/gstpushsrc.h:
+	Fix broken GObject macros
+
 2006-04-07  Wim Taymans  <wim@fluendo.com>
 
 	* libs/gst/base/gstbasesink.c: (gst_base_sink_get_sync_times):
